improve ts->mp4 convertor build script (#452)
* improve ts->mp4 convertor build script

* check bash high version number

User bash high version number to decide method of upper to lower case
conversion.

* rm unused convertor bin

* display bash version

* main change ffmpeg lib dir is exported

+ ts_to_mp4_convertor bin is copied to liveRecorder/bin

* removed files

* remove bin,+ name refactor

* minor update

* updated FromatConverter

get bin path from command line

* removed unused code

* added ffmpeg build script

* updated build scripts

setenv.sh -> live_prep.sh moved to scripts dir
updated build_ffmpeg.sh

options:
run live_prep.sh to build: ffmpeg/node_addons/all
build_ffmpeg.sh is either called from live_prep.sh or can be run
directly with 2 command line args: 1- ffmpeg build path, 2 - product
root path

* added sepate script for node_addons build

* changes after code review

* updates based on comments from code review

main changes:
name refactor: ts2mp4_build.sh -> build_ts2mp4_convertor.sh
updated the above script to run with 2 command line parameters as
follow: build_ts2mp4_convertor <ffmpeg build path> <product path>

* build_addons.sh -> build_addon.sh

* minor changes

* minor fix in build_ffmpeg.sh

* jenkins complied binaries

* corrected handling BUILD_CONF

* fix condition on BUILD_CONF value

* changes to fix condition on BUILD_CONF

* more changes after testing

* updated to avoid condition on empty BUILD_CONF value

* updated location of ffmpeg symlink

+The case modification operators were added in bash 4. Removed it.

* resolve issues with ffmpeg symlink

* run unlink anyway

* minor correction of bin path

* added OS

* removed bins from repository

* removed bin from repository

* updates based on Jess's review

* removed more binaries

* fixed some mistakes after testing latest changes

* updated build-nginx.sh

* corrected printed message 

--- a/.gitignore
+++ b/.gitignore
@@ -53,3 +53,11 @@ liveRecorder/ts_to_mp4_convertor/ts_to_mp4_convertor.xcodeproj/
 
 # ignore streaming_client’s Xcode project dir
 tests/streaming_client/streaming_client.xcodeproj/
+build/config.gypi
+
+# ignore liveRecorder executables under bin
+liveRecorder/bin
+
+# ignore liveController executables under bin
+bin
+
