--- a/liveRecorder/Config/configMapping.ini.template
+++ b/liveRecorder/Config/configMapping.ini.template
@@ -4,5 +4,5 @@ admin_secret = @KALTURA_PARTNER_ADMIN_SECRET@
 partner_id = -5
 session_duration = 86400
 mode = local
-token_key = TBD
+token_key = @LIVE_PACKAGER_TOKEN@
 api_service_url = @KALTURA_SERVICE_URL@
