onPrem installation updates
updates based on @DBezemer and @jessp01 installation process review and
testing. + documents update (still in progress)
+ revert changes to hostname.js @jessp01 changes will be taken instead.

--- a/common/config/config.json.template
+++ b/common/config/config.json.template
@@ -74,7 +74,7 @@
       "wowzaUrl": "http://kalsegsec-a.akamaihd.net/dc-0/m/pa-live-publish2/kLive/smil:1_oorxcge2_all.smil/playlist.m3u8"
   },
   "mediaServer" : {
-      "hostname" : "@HOSTNAME@",
+      "hostname" : "HOSTNAME",
       "applicationName" : "kLive",
       "port" : 1935,
       "user" : "",
