--- a/common/config/configMapping.json.template
+++ b/common/config/configMapping.json.template
@@ -2,14 +2,13 @@
 	".*": {
 		"rootFolderPath" : "@LIVE_CONTENT_PATH@",
 		"oldContentFolderPath" : "@LIVE_ARCHIVE_CONTENT_PATH@",
-		"logFileName" : "@LOG_FILE_NAME@",
+		"logFileName" : "@LOG_FILE_NAME",
 		"backendClient" : {
 			"serviceUrl" :"@KALTURA_SERVICE_URL@",
 			"adminSecret" :"@KALTURA_PARTNER_ADMIN_SECRET@",
 			"partnerId" : @KALTURA_PARTNER_ID@
 		},
 		"mediaServer" : {
-            "hostname" : "@HOSTNAME@",
 			"user" : "@WOWZA_ADMIN_USER@",
 			"password" : "@WOWZA_ADMIN_PASSWORD@"
 		},
