--- a/packager/config/nginx.conf.live.bootstrap.template
+++ b/packager/config/nginx.conf.live.bootstrap.template
@@ -2,5 +2,5 @@ if ($playlist = '') {
     set $playlist "playlist.json";
 }
 
-alias @CONTENT_DIR@/$live_type/$entryHash/$entryId/$playlist;
-include conf.d/cors.common.conf;
+alias @CONTENT_DIR@/$entryHash/$entryId/$playlist;
+include cors.common.conf;
