PLAT-6362-Report_live_diagnostics_report

--- a/common/config/config.json.template
+++ b/common/config/config.json.template
@@ -57,7 +57,7 @@
 
   },
   "diagnostics": {
-      "minChunkDurationInSec": 1,
+      "diagnosticsReportIntervalRunTimeInSec": 20,
       "maxChunkDurationInSec": 60,
       "errorsWindowSizeInMin" : 5,
       "ptsMaxMisalignmentAllowedInMSec" : 5000,
