PLAT-6362-Report_live_diagnostics_report: remove diagnostics analyzer from liveEntry module

--- a/common/config/config.json.template
+++ b/common/config/config.json.template
@@ -58,6 +58,7 @@
   },
   "diagnostics": {
       "diagnosticsReportIntervalRunTimeInSec": 20,
+      "minChunkDurationInSec": 1,
       "maxChunkDurationInSec": 60,
       "errorsWindowSizeInMin" : 5,
       "ptsMaxMisalignmentAllowedInMSec" : 5000,
