support use case that append ended in remote DC
These changes enable sync primary and backup in case of 24-7 live +
recording no matter what is diff in total duration between the DCs.

--- a/common/config/config.json.template
+++ b/common/config/config.json.template
@@ -108,6 +108,7 @@
        "recordingMaxDurationInHours" : 24,
        "recordingMinDurationInSeconds" : 60,
        "recordingSessionDurationInSec" : 180,
-       "recordingUpdateEntryTimeIntervalInMin" : 15
+       "recordingUpdateEntryTimeIntervalInMin" : 15,
+       "getEntryInfoIntervalMSec" : 60000
      }
 }
