--- a/common/config/config.json.template
+++ b/common/config/config.json.template
@@ -57,6 +57,7 @@
 
   },
   "diagnostics": {
+      "diagnosticsReportIntervalRunTimeInSec": 60,
       "minChunkDurationInSec": 1,
       "maxChunkDurationInSec": 60,
       "errorsWindowSizeInMin" : 5,
