many changes to fix merge issues
+ added support recording status
+ added threshold for comparing duration of recording between DCs
+ upload VOD only if no DC has live stream and recording ON_GOING
except the use case of max recording duration elapsed.

--- a/liveRecorder/Config/config.ini
+++ b/liveRecorder/Config/config.ini
@@ -10,6 +10,7 @@ session_duration = 86400
 failed_tasks_max_retries = 5
 failed_tasks_handling_interval = 1
 ks_privileges = all:*,disableentitlement
+duration_diff_tolerance_sec = 60
 
 
 # in minutes
