--- a/liveRecorder/Config/config.ini
+++ b/liveRecorder/Config/config.ini
@@ -1,5 +1,5 @@
 [default_config]
-recording_base_dir = /web/content/kLive/liveRecorder
+recording_base_dir = /Users/user/kLive_content/recording
 max_task_count= 10
 polling_interval_sec = 60
 concat_processors_count = 2
@@ -12,24 +12,24 @@ failed_tasks_handling_interval = 1
 ks_privileges = all:*,disableentitlement
 
 
-# in minutes
-mode = local
+# in minutesd
+mode = remote
 # Mode is choose between remote (ecdn), local (saas) or none (not doing anything with recording)
 
 nginx_port = 80
 nginx_host = localhost
 
 cron_job_polling_interval_hours = 2
-cron_job_log_file_name = /var/log/liveRecorder/recording_cron.log
+cron_job_log_file_name = /Users/user/Desktop/var/log/Live/recorder/recording_cron.log
 cron_jon_stamp = cronjob
 
 log_level = DEBUG
-log_to_console = False
-log_file_name = /var/log/liveRecorder/liveRecorder.log
+log_to_console = True
+log_file_name = /Users/user/Desktop/var/log/Live/recorder/liveRecorder.log
 log_rotate_windows_files = 30
 
-recover_log_file_name = /var/log/liveRecorder/recover.log
+recover_log_file_name = /Users/user/Desktop/var/log/Live/recorder/recover.log
 
 admin_secret = admin secret
-partner_id = 12345
-api_service_url = http://serviceURL
+partner_id = 102
+api_service_url = http://dev-backend28.dev.kaltura.com
