Add the high severity keyFrame interval to config.template

--- a/common/config/config.json.template
+++ b/common/config/config.json.template
@@ -67,7 +67,8 @@
       "bitrateDiffPercentageAllowed" : 10,
       "keyFrameIntervalExpectedInMSec" : 2000,
       "keyFrameIntervalDiffAllowedInMSec" : 200,
-      "maxFramesPerSeconds" : 30
+      "maxFramesPerSeconds" : 30,
+      "highSeverityKeyFrameInterval" : 4
   },
   "simulateStreams": {
       "enable":false,
