--- a/common/config/config.json.template
+++ b/common/config/config.json.template
@@ -116,5 +116,6 @@
        "recordingSessionDurationInSec" : 180,
        "recordingUpdateEntryTimeIntervalInMin" : 15,
        "recordingMaxAllowedMp4FilesQueueSize" : 100
-     }
+     },
+   "explicitLivePushNotificationTemplateName": "EXPLICIT_LIVE_PUSH_NOTIFICATIONS"
 }
