added new script to restore recording from backup DC
tests undergoing

--- a/liveRecorder/Config/config.ini
+++ b/liveRecorder/Config/config.ini
@@ -1,8 +1,8 @@
 [default_config]
-recording_base_dir = /web/content/kLive/liveRecorder
+recording_base_dir = /Users/lilach.maliniak/kLive_content/liveRecorder/
 max_task_count= 10
 polling_interval_sec = 60
-concat_processors_count = 2
+concat_processors_count = 1
 uploading_processors_count = 1
 upload_token_buffer_size_mb = 6
 num_of_upload_thread = 7
@@ -10,26 +10,27 @@ session_duration = 86400
 failed_tasks_max_retries = 5
 failed_tasks_handling_interval = 1
 ks_privileges = all:*,disableentitlement
+duration_diff_tolerance_sec = 60
 
 
 # in minutes
-mode = local
+mode = remote
 # Mode is choose between remote (ecdn), local (saas) or none (not doing anything with recording)
 
 nginx_port = 80
 nginx_host = localhost
 
 cron_job_polling_interval_hours = 2
-cron_job_log_file_name = /var/log/liveRecorder/recording_cron.log
+cron_job_log_file_name = /Users/lilach.maliniak/Documents/tmp/var/log/liveRecorder/recording_cron.log
 cron_jon_stamp = cronjob
 
 log_level = DEBUG
-log_to_console = False
-log_file_name = /var/log/liveRecorder/liveRecorder.log
+log_to_console = True
+log_file_name = /Users/lilach.maliniak/Documents/tmp/var/log/liveRecorder/liveRecorder.log
 log_rotate_windows_files = 30
 
-recover_log_file_name = /var/log/liveRecorder/recover.log
+recover_log_file_name =/Users/lilach.maliniak/Documents/tmp/var/log/liveRecorder/recover.log
 
 admin_secret = admin secret
-partner_id = 12345
-api_service_url = http://serviceURL
+partner_id = 101
+api_service_url = http://dev-backend30.dev.kaltura.com
