--- a/package.json
+++ b/package.json
@@ -38,8 +38,7 @@
     "q-io": "1.13.4",
     "request": "^2.61.0",
     "touch": "1.0.0",
-    "underscore": "1.8.3",
-    "v8-profiler": "5.6.5"
+    "underscore": "1.8.3"
   },
   "description": "DVR implementation built on top of live streams",
   "bugs": {
