--- a/packager/config/nginx.conf.live.conf.template
+++ b/packager/config/nginx.conf.live.conf.template
@@ -16,15 +16,14 @@ map $user_type $overrideClipTo{
 	default '{"clipFrom":0, "clipTo":0}';
 }
 
-location ~ \/(?<live_type>live|recording|live-stg)\/[^\/]+\/p\/(?<partnerId>\d+)\/e\/(?<entryId>[^\/]+(?<entryHash>\w))\/(sd\/(?<segmentDuration>\d+)\/)?t\/(?<token>[^\/]+)(/type/(?<user_type>\w+))?\/ {
+location ~ \/(?<live_type>live|recording|live-stg)\/[^\/]+\/p\/(?<partnerId>\d+)\/e\/(?<entryId>[^\/]+(?<entryHash>\w))\/(sd\/(?<segmentDuration>\d+)\/)?(type\/(?<user_type>\w+)\/)?t\/(?<token>[^\/]+)\/ {
 	#this is for backward compatability to fetch from wowza  
 	location ~ ^/m/(?<mediaServer>[^/]+)/live/legacy/p/\d+/e/[^/]+(/sd/[^/]+)?/t/[^/]+/(?<path>.*) {
 		proxy_pass http://${mediaServer}:1935/kLive/ngrp:${entryId}_1_all/$path$is_args$args;
 	}
 
-	vod_media_set_override_json $overrideClipTo;
-
 	location ~ /live|live-stg/ {
+		vod_media_set_override_json $overrideClipTo;
 		location ~ /sd/2000/ {
 			vod_expires_live_time_dependent 1;
 			vod_live_mapping_cache live_mapping_cache_low_latency 256m 1;
