PLAT-8363: in order not to lose frames when recording is started via explicit live we keep the latest mp4 files and when recording is started we add the relevant ones to the recording and continue with regular recording

--- a/common/config/config.json.template
+++ b/common/config/config.json.template
@@ -117,5 +117,6 @@
        "recordingUpdateEntryTimeIntervalInMin" : 15,
        "recordingMaxAllowedMp4FilesQueueSize" : 100
      },
-   "explicitLivePushNotificationTemplateName": "EXPLICIT_LIVE_PUSH_NOTIFICATIONS"
+   "explicitLivePushNotificationTemplateName": "EXPLICIT_LIVE_PUSH_NOTIFICATIONS",
+   "recordingNotStartedMaxQueueSize": "10"
 }
