PLAT-8490: Report inconsistent frame rate

--- a/common/config/config.json.template
+++ b/common/config/config.json.template
@@ -69,7 +69,8 @@
       "keyFrameIntervalDiffAllowedInMSec" : 200,
       "maxFramesPerSeconds" : 30,
       "maxRecommendedKeyFrameInterval" : 4,
-      "minRecommendedKekFrameInterval" : 0.75
+      "minRecommendedKekFrameInterval" : 0.75,
+      "numOfFrameRateSamples" : 5
   },
   "simulateStreams": {
       "enable":false,
