add packager + fix live controller

--- a/common/config/configMapping.json.template
+++ b/common/config/configMapping.json.template
@@ -9,6 +9,7 @@
 			"partnerId" : @KALTURA_PARTNER_ID@
 		},
 		"mediaServer" : {
+            "hostname" : "@HOSTNAME@",
 			"user" : "@WOWZA_ADMIN_USER@",
 			"password" : "@WOWZA_ADMIN_PASSWORD@"
 		},
