--- a/deployment/docker/.env.template
+++ b/deployment/docker/.env.template
@@ -1,7 +1,10 @@
 VERSION=
-LIVE_CONTROLLERL_HOSTNAME=
+LIVE_CONTROLLER_HOSTNAME=
 MEDIA_SERVER_HOSTNAME=
 SERVICE_URL=
 PARTNER_ID=-5
 PARTNER_ADMIN_SECRET=
 WSE_LIC=
+CONTENT_DIR=
+LOGS_DIR=
+CONFIG_DIR=
