--- a/deployment/docker/.env.template
+++ b/deployment/docker/.env.template
@@ -1,6 +1,5 @@
 VERSION=
-LIVE_CONTROLLER_HOSTNAME=
-MEDIA_SERVER_HOSTNAME=
+SERVER_NODE_HOST_NAME=
 SERVICE_URL=
 PARTNER_ID=-5
 PARTNER_ADMIN_SECRET=
