cut image size by 700MB

--- a/deployment/docker/liveController/Dockerfile
+++ b/deployment/docker/liveController/Dockerfile
@@ -1,7 +1,7 @@
 #docker build -t kaltura/livecontroller:1.26 .
 #docker run -d -v /myconfig/:/myconfig/ -v /var/log/liveController/:/var/log/liveController/ --network=host kaltura/livecontroller:1.26 ubuntudrm
 #docker exec -it
-FROM node:boron AS addon
+FROM node:boron AS build
 
 #RUN apk add --update build-base curl nasm tar bzip2 zlib-dev yasm-dev
 
@@ -21,11 +21,12 @@ COPY ./ ./
 
 RUN rm -rf ./build
 
-FROM node:boron
+FROM node:boron-slim
+
 
 WORKDIR /opt/kaltura/liveController/
 
-COPY --from=addon /opt/kaltura/liveController/ ./
+COPY --from=build /opt/kaltura/liveController/ ./
 
 ARG CONF_FOLDER=/myconfig/
 VOLUME /var/log/liveController/
