fix  docker packager

--- a/deployment/docker/packager/Dockerfile
+++ b/deployment/docker/packager/Dockerfile
@@ -1,12 +1,15 @@
 #docker stop $(docker ps -a -q) && docker rm  $(docker ps -a -q)
 #docker build -t  kaltura/live-packager  .
-#docker  run --add-host pa-udrm:127.0.0.1   -v /Users/guyjacubovski/dev/nginx-vod-module-saas:/opt/nginx-vod-module-saas   -p 80:80  --name packager  -t live-packager
+#option1:
+#docker  run --add-host pa-udrm:127.0.0.1    -v /Users/guyjacubovski/dev/nginx-vod-module-saas:/usr/local/nginx/externalConf  -p 80:80  --name packager  -t live-packager
+#or docker  run    -p 80:80  --name packager  -t kaltura/live-packager
+
+
 #docker exec -it `docker ps | grep "live-packager" | awk '{print $1}'` bash
 
 
 FROM debian:stretch-slim AS builder
 
-ARG CONF_FOLDER=/opt/nginx-vod-module-saas
 ARG CONF_FILE=/opt/nginx-vod-module-saas/conf/nginx.conf
 
 
@@ -17,7 +20,7 @@ RUN  apt-get update \
 
 WORKDIR /opt
 
-COPY deploy.sh .
+COPY ./deployment/docker/packager/deploy.sh .
 
 RUN ./deploy.sh
 
@@ -38,29 +41,33 @@ RUN ./configure --with-http_secure_link_module \
     make install
 
 
-
 FROM debian:stretch-slim
 
 ARG CONF_FOLDER=/opt/nginx-vod-module-saas
 
 #copy build artifacts
-COPY --from=builder /opt/nginx/objs/nginx /sbin/nginx
 COPY --from=builder /usr/lib/x86_64-linux-gnu/libcrypto.so.1.0.2 /usr/lib/x86_64-linux-gnu/libcrypto.so.1.0.2
 COPY --from=builder /usr/local/nginx /usr/local/nginx
+
+COPY ./packager/config/ /opt/nginx-vod-module-saas/conf/
+COPY ./packager/www /opt/nginx-vod-module-saas/static/
 
 #log folder
 VOLUME /var/log/nginx
 
-#config folder
-VOLUME $CONF_FOLDER
-
 #content folder
 VOLUME /web/content/kLive
+
+#conf folder
+VOLUME /usr/local/nginx/externalConf
 
 
 EXPOSE 80
 
 STOPSIGNAL SIGTERM
 
+WORKDIR /usr/local/nginx
 
-CMD ["/sbin/nginx", "-g", "daemon off;"]
+COPY ./deployment/docker/packager/entryPoint.sh   .
+
+ENTRYPOINT ["./entryPoint.sh"]
