--- a/liveRecorder/Config/configMapping.ini.template
+++ b/liveRecorder/Config/configMapping.ini.template
@@ -4,7 +4,7 @@ admin_secret = @KALTURA_PARTNER_ADMIN_SECRET@
 partner_id = @KALTURA_PARTNER_ID@
 mode = @VOD_UPLOAD_MODE@
 token_key = @LIVE_PACKAGER_TOKEN@
-cron_job_log_file_name = "@LOGS_BASE_PATH@/recording_cron.log"
-log_file_name = "@LOGS_BASE_PATH@/liveRecorder.log"
-recover_log_file_name = "@LOGS_BASE_PATH@/recorder.log"
+cron_job_log_file_name = @LOGS_BASE_PATH@/recording_cron.log
+log_file_name = @LOGS_BASE_PATH@/liveRecorder.log
+recover_log_file_name = @LOGS_BASE_PATH@/recorder.log
 api_service_url = @KALTURA_SERVICE_URL@
