add originMode for dev. license

--- a/common/config/config.json.template
+++ b/common/config/config.json.template
@@ -82,6 +82,7 @@
   "mediaServer" : {
       "hostname" : "@HOSTNAME@",
       "applicationName" : "kLive",
+      "originMode": "true",
       "port" : 1935,
       "user" : "",
       "password" : "",
