--- a/deployment/kubernetes/live-publish.yaml
+++ b/deployment/kubernetes/live-publish.yaml
@@ -11,17 +11,6 @@ spec:
     protocol: TCP
     port: 1935
 ---
-apiVersion: v1
-kind: ConfigMap
-metadata:
-  name: my-env
-data:
-  SERVICE_URL: "http://www.kaltura.com"
-  PARTNER_ID: ""
-  PARTNER_ADMIN_SECRET: ""
-  WSE_LIC: ""
-  PACKAGER_SECURE_TOKEN: ""
----
 apiVersion: apps/v1
 kind: StatefulSet
 metadata:
@@ -59,6 +48,7 @@ spec:
         resources:
             requests:
               cpu: "3.5"
+              nvidia.com/gpu: 1
         image: 983882572364.dkr.ecr.eu-west-1.amazonaws.com/media-server:test
         ports:
           - name: rtmp
