--- a/common/config/config.json.template
+++ b/common/config/config.json.template
@@ -121,5 +121,6 @@
        "recordingMaxAllowedMp4FilesQueueSize" : 100
      },
    "explicitLivePushNotificationTemplateName": "EXPLICIT_LIVE_PUSH_NOTIFICATIONS",
+   "newTaskPushNotificationTemplateName": "ENTRY_SERVER_NODE_CREATED_NOTIFICATIONS",
    "recordingNotStartedMaxQueueSize": "11"
 }
