--- a/common/config/configMapping.json.template
+++ b/common/config/configMapping.json.template
@@ -9,7 +9,8 @@
 			"partnerId" : @KALTURA_PARTNER_ID@
 		},
 		"mediaServer" : {
-		    "wowzaServer": "@HOSTNAME@",
+		    "hostname": "@HOSTNAME@",
+		    "wowzaServer": "localhost",
 			"user" : "@WOWZA_ADMIN_USER@",
 			"originMode": "true",
 			"password" : "@WOWZA_ADMIN_PASSWORD@"
