--- a/deployment/kubernetes/live-publish.yaml
+++ b/deployment/kubernetes/live-publish.yaml
@@ -107,7 +107,7 @@ spec:
         image: 983882572364.dkr.ecr.eu-west-1.amazonaws.com/live-packager:test
         volumeMounts:
           - name: content
-            mountPath: /web/content/kLiveapp
+            mountPath: /web/content/kLive
         ports:
           - name: http
             containerPort: 8080
