--- a/deployment/kubernetes/live-front.yaml
+++ b/deployment/kubernetes/live-front.yaml
@@ -30,7 +30,7 @@ data:
            root   /usr/share/nginx/html;
            index  index.html index.htm;
         }
-        location ~ /m/([^\/]+)/(.*) {
+        location ~ /m/([^.]+).([^\/]+)/(.*) {
             proxy_set_header Host      $host;   #preserve host name
             proxy_set_header X-Real-IP $remote_addr;   #preserve ip address
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
@@ -38,7 +38,7 @@ data:
             proxy_http_version 1.1;
             proxy_set_header Upgrade $http_upgrade;
             proxy_set_header Connection "upgrade";
-            proxy_pass http://$1.live-publish.default.svc.cluster.local:8080/$2$is_args$args;
+            proxy_pass http://$1.live-publish.default.svc.cluster.local:8080/$3$is_args$args;
         }
      }
 ---
