--- a/packager/config/nginx.conf.live.conf.template
+++ b/packager/config/nginx.conf.live.conf.template
@@ -11,7 +11,7 @@ vod_dash_profiles urn:mpeg:dash:profile:isoff-live:2011;
 expires off;
 vod_upstream_location "";
 
-location ~ \/(?<live_type>live|recording|live-stg)\/[^\/]+\/p\/(?<partnerId>\d+)\/e\/(?<entryId>[^\/]+(?<entryHash>\w))\/(sd\/(?<segmentDuration>\d+)\/)?(type\/(?<user_type>\w+)\/)?t\/(?<token>[^\/]+)\/ {
+location ~ \/(?<live_type>live|recording|live-stg|clip)\/[^\/]+\/p\/(?<partnerId>\d+)\/e\/(?<entryId>[^\/]+(?<entryHash>\w))\/(sd\/(?<segmentDuration>\d+)\/)?(type\/(?<user_type>\w+)\/)?t\/(?<token>[^\/]+)\/ {
 	#this is for backward compatability to fetch from wowza  
 	location ~ ^/m/(?<mediaServer>[^/]+)/live/legacy/p/\d+/e/[^/]+(/sd/[^/]+)?/t/[^/]+/(?<path>.*) {
 		proxy_pass http://${mediaServer}:1935/kLive/ngrp:${entryId}_1_all/$path$is_args$args;
@@ -42,13 +42,20 @@ location ~ \/(?<live_type>live|recording|live-stg)\/[^\/]+\/p\/(?<partnerId>\d+)
 
 	}
 	location ~ /recording/ {
-		#override default caching expiration for to 1m
-		vod_expires_live 1m;
-		vod_expires_live_time_dependent 1m;
+	    #override default caching expiration for to 1m
+	    vod_expires_live 1m;
+	    vod_expires_live_time_dependent 1m;
 
-		#override to do one continuous recording (no gaps)
-		vod_force_continuous_timestamps on;
-		include nginx.conf.live.protocols;
+	    #override to do one continuous recording (no gaps)
+	    vod_force_continuous_timestamps on;
+	    include nginx.conf.live.protocols;
+    }
+
+    location ~ /clip/ {
+            vod_force_playlist_type_vod on;
+            #override to do one continuous recording (no gaps)
+            vod_force_continuous_timestamps on;
+            vod_expires 1d;
+            include nginx.conf.live.protocols;
 	}
-
 }
