--- a/package.json
+++ b/package.json
@@ -24,23 +24,23 @@
     "rimraf": "2.4.3",
     "sinon": "1.9.0",
     "sinon-chai": "2.5.0",
-    "tmp": "0.0.27"
+    "tmp": "0.0.33"
   },
   "dependencies": {
     "chunked-stream": "0.0.2",
-    "commander": "^2.9.0",
+    "commander": "2.19.0",
     "forever": "0.15.3",
-    "glob": "7.0.5",
-    "log4js": "0.6.37",
+    "glob": "7.1.3",
+    "log4js": "4.0.2",
     "mkdirp": "0.5.1",
     "nconf": "^0.8.4",
-    "q": "1.4.1",
+    "q": "1.5.1",
     "q-io": "1.13.4",
-    "request": "^2.61.0",
-    "socket.io-client": "^2.0.4",
-    "touch": "1.0.0",
-    "underscore": "1.8.3",
-    "nan": "2.7.0"
+    "request": "2.88.0",
+    "socket.io-client": "2.2.0",
+    "touch": "3.1.0",
+    "underscore": "1.9.1",
+    "nan": "2.12.1"
   },
   "description": "DVR implementation built on top of live streams",
   "bugs": {
