Add config template to uid and gid

--- a/liveRecorder/Config/configMapping.ini.template
+++ b/liveRecorder/Config/configMapping.ini.template
@@ -3,6 +3,8 @@ recording_base_dir = @RECORDING_FOLDER@
 admin_secret = @KALTURA_PARTNER_ADMIN_SECRET@
 partner_id = @KALTURA_PARTNER_ID@
 mode = @VOD_UPLOAD_MODE@
+local_uid = @LOCAL_UID@
+local_gid = @LOCAL_GID@
 token_key = @LIVE_PACKAGER_TOKEN@
 cron_job_log_file_name = @LOGS_BASE_PATH@/recording_cron.log
 log_file_name = @LOGS_BASE_PATH@/liveRecorder.log
